--- a/src/styles/abstract/color.scss
+++ b/src/styles/abstract/color.scss
@@ -2,7 +2,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 	$color-primary:					#ff8900;
-	$color-complement:				#518196;
+	$color-complement:				#26272C;
 	$color-success:					#149A57;
 	$color-info:					#303E73;
 	$color-danger:					#D23D29;
@@ -92,5 +92,13 @@
 		.text-grey-30				{ color: $color-grey-30!important; }
 		.text-grey-35				{ color: $color-grey-35!important; }
 		.text-grey-40				{ color: $color-grey-40!important; }
+		.text-grey-45				{ color: $color-grey-45!important; }
+		.text-grey-50				{ color: $color-grey-50!important; }
+		.text-grey-55				{ color: $color-grey-55!important; }
+		.text-grey-60				{ color: $color-grey-60!important; }
+		.text-grey-65				{ color: $color-grey-65!important; }
+		.text-grey-70				{ color: $color-grey-70!important; }
+		.text-grey-75				{ color: $color-grey-75!important; }
+		.text-grey-80				{ color: $color-grey-80!important; }
 
 		.text-white					{ color: white!important; }
