--- a/src/styles/abstract/tools/mixin.scss
+++ b/src/styles/abstract/tools/mixin.scss
@@ -80,7 +80,7 @@
 	@mixin antialiased () {
 		-webkit-font-smoothing:     antialiased;
 		-moz-osx-font-smoothing:    grayscale;
-		text-rendering:             optimizelegibility;
+		text-rendering:             geometricPrecision;
 	}
 
 
