--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -1,1 +1,124 @@
-h2 home2
+section.background
+	#welcome
+	.container
+		.twelve.col
+			h3.text-right.octo-top.text-white Enfin une bonne raison d'entreprendre !
+			button.pull-right.button.quad-bot.complement(href="") essais gratuit
+
+section
+	.container
+		.row
+			.eight.col
+				h4.quad-top Fini la paperasse !
+				h6.text-grey-80 Arrêtez de vous prendre la tête, entreprenez.
+				p.quad-bot.
+					Que ce soit pour l’editions ou la gestion de vos devis et factures,
+					Peon vous guide et prend en charge les questions d’ordre légal.
+					Vous gagnez un temp considérable à rentabiliser selon vos envies.
+			.four.col
+				.circle.big-circle.bg-complement-light.quad-top
+		.row
+			.four.col
+				.circle.big-circle.bg-complement-light.quad-top
+			.eight.col.text-right
+				h4.quad-top Le temps c'est de l'argent.
+				h6.text-grey-80 Arrêtez de vous prendre la tête, entreprenez.
+				p.quad-bot.
+					Que ce soit pour l’editions ou la gestion de vos devis et factures,
+					Peon vous guide et prend en charge les questions d’ordre légal.
+					Vous gagnez un temp considérable à rentabiliser selon vos envies.
+		.row
+			.eight.col
+				h4.quad-top Fini la paperasse !
+				h6.text-grey-80 Arrêtez de vous prendre la tête, entreprenez.
+				p.quad-bot.
+					Que ce soit pour l’editions ou la gestion de vos devis et factures,
+					Peon vous guide et prend en charge les questions d’ordre légal.
+					Vous gagnez un temp considérable à rentabiliser selon vos envies.
+			.four.col
+				.circle.big-circle.bg-complement-light.quad-top
+
+section
+	.container
+		.row
+			h4.text-center.octo-top Faites valider vos devis plus vite que jamais
+			.eight.col.offset-two.bg-grey-05.double-padding.double-top
+				| <iframe width="100%" height="315" src="https://www.youtube.com/embed/GsFQ6jskci0" frameborder="0" allowfullscreen></iframe>
+
+section
+	.container
+		.row
+			.twelve.col
+				h4.text-center.octo-top En détails, ça fait quoi ?
+				h6.text-center.text-grey-80.quad-bot liste non exhaustive
+		.row
+			.four.col
+				.circle.small-circle.bg-complement-light
+				p.i.add-top.text-center Accessible sur tablette, PC
+				// p.text-center mabite
+			.four.col
+				.circle.small-circle.bg-complement-light
+				p.i.add-top.text-center Données sécurisées.
+				// p.text-center mabite
+			.four.col
+				.circle.small-circle.bg-complement-light
+				p.i.add-top.text-center Edition de devis et factures.
+				// p.text-center mabite
+		.row.octo-bot.double-top
+			.four.col
+				.circle.small-circle.bg-complement-light
+				p.i.add-top.text-center Calcul automatique des charges.
+				// p.text-center mabite
+			.four.col
+				.circle.small-circle.bg-complement-light
+				p.i.add-top.text-center Autogestion des impayé.
+				// p.text-center mabite
+			.four.col
+				.circle.small-circle.bg-complement-light
+				p.i.add-top.text-center Pas d'engagement de durée.
+				// p.text-center mabite
+section.background
+	#peon
+	.container
+		.row
+			.twelve.col
+				h4.text-white.text-center.quad-top Pas convaincu ? Essayez le !
+				.fluid-horizontal-center
+					button.button.double-bot.complement C'est gratuit
+footer.bg-complement
+	.container
+		.row.text-white.double-bot.quad-top
+			.three.col
+				h6 L'application
+				ul.no-style
+					li
+						a(href="#") Créer un compte
+					li
+						a(href="#") S'inscrire
+					li
+						a(href="#") FAQ
+			.three.col
+				h6 Contact
+				ul.no-style
+					li
+						a(href="#") Email
+					li
+						a(href="#") Twitter
+					li
+						a(href="#") Facebook
+					li
+						a(href="#") Google +
+			.three.col
+				h6 A propos
+				ul.no-style
+					li
+						a(href="#") Histoire
+					li
+						a(href="#") Presse
+					li
+						a(href="#") Jobs
+			.three.col
+				h6 Conditions
+				ul.no-style
+					li
+						a(href="#") CGV
