--- a/src/styles/abstract/base.scss
+++ b/src/styles/abstract/base.scss
@@ -2,7 +2,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 	//.include-font("assets/font/icons/", "openSans"); 
-	@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,400italic,700italic,300|PT+Serif:400,800italic,700italic|PT+Serif+Caption);
+	@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,800,400italic,700italic,300|PT+Serif:400,800italic,700italic|PT+Serif+Caption);
 
 	$font-georgia:          	Georgia, "Times New Roman", Times, serif;
 
@@ -25,11 +25,12 @@
 	/* NOTE
 	html is set to 62.5% so that all the REM measurements throughout Skeleton
 	are based on 10px sizing. So basically 1.5rem = 15px :) */
-	html 				{ font-size: 62.5%; }
+	html 				{ font-size: 62.5%; 
+						  @include antialiased();
+						}
 	html, body 			{ width: 100%; height: 100%; }
 	body 				{ 
 						  font-family: $text-font;
-						  @include antialiased();
 						  @include font(0, $text-size, $ratio);
 						} 
 
@@ -38,6 +39,7 @@
 
 		h1, h2, h3, h4, h5, h6 { 
 			font-family: $title-font;
+			color:inherit;
 			font-weight: 300;
 			margin-top: 0;
 			margin-bottom: 2rem;
