--- a/src/styles/atom/list.scss
+++ b/src/styles/atom/list.scss
@@ -3,6 +3,12 @@
 
 	ul, ol, li, dl, dt, dd { }
 
+	.no-style {
+		list-style-type: none;
+		margin:0;
+		margin-bottom: 10px;
+		padding:0;
+	}
 
 	/* ## Nested lists
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
