--- a/src/index.jade
+++ b/src/index.jade
@@ -28,6 +28,8 @@ html
 		meta(name='robots', content='index, follow')
 		meta(http-equiv='cache-control', content='public')
 		link(type="text/css", rel="stylesheet", href="styles/style.css")
+		base(href="/")
+
 
 	body(ng-scroll="" ng-app="app")
 		div(ui-view="")
