--- a/src/styles/abstract/color.scss
+++ b/src/styles/abstract/color.scss
@@ -100,5 +100,9 @@
 		.text-grey-70				{ color: $color-grey-70!important; }
 		.text-grey-75				{ color: $color-grey-75!important; }
 		.text-grey-80				{ color: $color-grey-80!important; }
+		.text-grey-85				{ color: $color-grey-85!important; }
+		.text-grey-90				{ color: $color-grey-90!important; }
+		.text-grey-95				{ color: $color-grey-95!important; }
+		.text-grey-100				{ color: $color-grey-100!important; }
 
 		.text-white					{ color: white!important; }
