--- a/src/styles/atom/link.scss
+++ b/src/styles/atom/link.scss
@@ -7,7 +7,7 @@
 		&:hover 	{ outline: 0; text-decoration: underline; }
 		&:active 	{ outline: 0; }
 		&:visited 	{ color: inherit; }
-		&:focus	 	{ outline: thin dotted; }
+		&:focus	 	{ outline: 0;  }
 	}
 
 	a:not(.button) + a:not(.button) {
