--- a/src/templates/contact.jade
+++ b/src/templates/contact.jade
@@ -1,56 +1,29 @@
-#contact-illustration.bg-complement.double-bottom
+section.background
+	.container
+		.twelve.col
+			h3.octo-top.double-bot.text-white.text-center Contactez nous !
 
-.container#contact
-	.separator
-	.row
-		.three.columns.alpha.omega
-			#quentin.flip.double-bottom
-				.front
-					| <!-- inject:quentin:html -->
-					| <!-- endinject -->
-				.back
-			h5 Illustration
-			h6 Quentin Sombsthay
-			p Il s'appelle Sombsthay, quentin Sombsthay. Eh ouais.
-		.three.columns.alpha.omega
-			#anthony.flip.double-bottom
-				.front
-				.back
-			h5 Marketing
-			h6 Anthony Lacroix
-			p Anthony est le roi des makis. Eh oui.
-		.three.columns.alpha.omega
-			#valentin.flip.double-bottom
-				.front
-				.back
-			h5 Developpement
-			h6 Valentin Rebierre
-			p Valentin, parlons de boudin, perlinpinpin.
-		.three.columns.alpha.omega
-			#thibaud.flip.double-bottom
-				.front
-				.back
-			h5 Design
-			h6 Thibaud Frere
-			p Thibaud dodo bédo cuisto, il va te faire la peau.
-	.separator
-	.row 
-		.twelve.columns
-			h3.text-center A propos
-			p.text-center Malheureusement, bien que simplifié, le statut d'auto-entrepreneurs soulève beaucoup de questions d'ordre légal qui compliquent encore pas mal la gestion et l'organisation. Ces difficultés ont toujours été un frein au bon développement d'une activité. Parti du constat que les services proposés actuellement sont chers, compliqués et / ou prennent pas en compte les besoins réels des auto-entrepreneurs. Nous avons pris la décision de s'associer dans la conception d'un outil simple, et accessible à tous à moindre frais.
-	#contactus.quad-bottom.quad-top
-		.row 
-			.twelve.columns
-				h3.text-center Nous contacter
-		.row
-			.twelve.columns
-				textarea
-				a.button Envoyer !
-	.row
-		.twelve.columns
-			h3.text-center Mentions légales
-			p.text-center
-				|<br> SARL au capital de 1000 euros 
-				|<br> 38, rue de jouy 57160 Moulins les Metz
-				|<br> Crée le 10/10/2015
-				|<br> Hebergeur OVH
+.container.double-top.double-bot
+	form.row
+		.eight.col
+			.six.col
+				label Ton nom
+				input.full(type="text", placeholder="")
+			.six.col
+				label Email
+				input.full(type="email", placeholder="")
+			.twelve.col
+				label Message
+				textarea.full(placeholder="Votre message ici ...")
+				a.add-top.button.complement.pull-right Envoyer
+		.four.col.double-padding
+			i.icon.icon-plane.pull-left.text-grey-80.add-padding
+			h6 Ou bien par
+			hr.lines
+			ul.no-style
+				li
+					a(href="http://twitter.com/peon") Twitter
+				li
+					a(href="http://twitter.com/peon") Facebook
+				li
+					a(href="http://twitter.com/peon") Google +
