--- a/src/templates/faq.jade
+++ b/src/templates/faq.jade
@@ -1,33 +1,70 @@
 section.background
 	.container
 		.twelve.col
-			h1.b.quad-top.double-bot.text-white FAQ
+			h3.octo-top.double-bot.text-white.text-center Les questions c'est par ici !
 
 .row
-	.container
-		.twelve.columns#faq
-			.question
-				a(toggle-child-height="active")
-					h5 Comment m'inscrire au statut d'auto-entrepreneur?
-					| <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" duration="20" delay="200" width="32" height="32" version="1.1"><style>.s0{fill:none;stroke-width:1.5;stroke:#ff8900;}</style><path d="M15.9 2C15.2 11.3 14.6 22 15.5 30M29.4 16.4C20.1 14.9 11.8 16 2.4 16" class="s0"/></svg>
-				| <p> Vous pouvez vous inscrire directement en ligne <a href="https://www.cfe.urssaf.fr/autoentrepreneur/CFE_Declaration">ici</a> ou retirer un dossier d'inscription à la <a href="http://www.artisanat.fr/portals/0/annuaire/annuaire.html">chambres des métiers de votre région</a>. Une fois inscrit, vous devez encore créer un compte dédié à votre activité professionnel. Heureusement, un compte particulier suffi, du moment que celui-ci est dédié à votre activité. 
-			.question
-				a(toggle-child-height="active")
-					h5 Quelles sont mes obligations dans le cas d'une activité artisanale?
-					| <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" duration="20" delay="400" width="32" height="32" version="1.1"><style>.s0{fill:none;stroke-width:1.5;stroke:#ff8900;}</style><path d="M15.9 2C15.2 11.3 14.6 22 15.5 30M29.4 16.4C20.1 14.9 11.8 16 2.4 16" class="s0"/></svg>
-				| <p> Dans le cas d'une activité artisanal, et ce depuis 2015, vous avez l'obligation d'effectuer un stage de préparation à l'installation. Pour effectuer ce stage vous devez contacter la chambres des métiers de votre région, dont les coordonnées se trouve <a href="http://www.artisanat.fr/portals/0/annuaire/annuaire.html">ici</a> Pour les profession réglementé (dont voici la liste) il est également obligatoire de contracter une assurance professionnel. </p>
-			.question
-				a(toggle-child-height="active")
-					h5 Doit-je payer des cotisation si je ne gagne pas d'argent?
-					| <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" duration="20" delay="600" width="32" height="32" version="1.1"><style>.s0{fill:none;stroke-width:1.5;stroke:#ff8900;}</style><path d="M15.9 2C15.2 11.3 14.6 22 15.5 30M29.4 16.4C20.1 14.9 11.8 16 2.4 16" class="s0"/></svg>
-				| <p> Le statut d'auto-entrepreneur n'impose de payer des cotisations que sur le chiffre d'affaire réalisé. Par conséquent, si vous ne gagnez rien, vous ne payez rien.</p>
-			.question
-				a(toggle-child-height="active")
-					h5 Puis-je cumuler les status?
-					| <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" duration="20" delay="800" width="32" height="32" version="1.1"><style>.s0{fill:none;stroke-width:1.5;stroke:#ff8900;}</style><path d="M15.9 2C15.2 11.3 14.6 22 15.5 30M29.4 16.4C20.1 14.9 11.8 16 2.4 16" class="s0"/></svg>
-				| <p>  Vous ne pouvez cumuler plusieurs activités indépendante. Par contre, vous pouvez par exemple exercer une activité de gérant minoritaire au sein d'une SARL et être auto-entrepreneur.  </p>
-			.question
-				a(toggle-child-height="active")
-					h5 Quel limite de chiffre d'affaire?
-					| <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" duration="20" delay="1000" width="32" height="32" version="1.1"><style>.s0{fill:none;stroke-width:1.5;stroke:#ff8900;}</style><path d="M15.9 2C15.2 11.3 14.6 22 15.5 30M29.4 16.4C20.1 14.9 11.8 16 2.4 16" class="s0"/></svg>
-				| <p> Deux limite de chiffre d'affaire sont applicable selon la nature de votre activité: <br> - 82 200 € pour une activité de vente de marchandises, d'objets, de fournitures, de denrées à emporter ou à consommer sur place, ou pour des prestations d'hébergement, à l'exception de la location de locaux d'habitation meublés dont le seuil est de 32 900 €. <br> - 32 900 € pour les prestations de services relevant de la catégorie des bénéfices industriels et commerciaux (BIC) ou des bénéfices non commerciaux (BNC). Pour les créations en cours d'année, ces montants sont réduits en fonction de la durée d'activité. </p>
+	.container.quad-bot.quad-top
+		.row
+			.twelve.col
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				h6 Comment m'inscrire au statut d'auto-entrepreneur?
+				hr.lines
+				p.
+					Vous pouvez vous inscrire directement en ligne 
+					<a href="https://www.cfe.urssaf.fr/autoentrepreneur/CFE_Declaration">ici</a> 
+					ou retirer un dossier d'inscription à la 
+					<a href="http://www.artisanat.fr/portals/0/annuaire/annuaire.html">
+					chambres des métiers de votre région</a>. 
+					Une fois inscrit, vous devez encore créer un compte dédié à votre 
+					activité professionnel. Heureusement, un compte particulier suffi, 
+					du moment que celui-ci est dédié à votre activité. 
+		.row
+			.twelve.col.double-top
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				h6 Quelles sont mes obligations dans le cas d'une activité artisanale?
+				hr.lines
+				p.
+					Dans le cas d'une activité artisanal, et ce depuis 2015, 
+					vous avez l'obligation d'effectuer un stage de préparation à 
+					l'installation. Pour effectuer ce stage vous devez contacter 
+					la chambres des métiers de votre région, dont les coordonnées 
+					se trouve <a href="http://www.artisanat.fr/portals/0/annuaire/annuaire.html">ici</a> 
+					Pour les profession réglementé (dont voici la liste) il est également obligatoire de
+					 contracter une assurance professionnel.
+		.row
+			.twelve.col.double-top
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				h6 Doit-je payer des cotisation si je ne gagne pas d'argent?
+				hr.lines
+				p.
+					Le statut d'auto-entrepreneur n'impose de payer des cotisations 
+					que sur le chiffre d'affaire réalisé. Par conséquent, si vous ne 
+					gagnez rien, vous ne payez rien.
+		.row
+			.twelve.col.double-top
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				h6 Puis-je cumuler les status?
+				hr.lines
+				p.
+					Vous ne pouvez cumuler plusieurs activités indépendante. 
+					Par contre, vous pouvez par exemple exercer une activité 
+					de gérant minoritaire au sein d'une SARL et être auto-entrepreneur.
+		.row
+			.twelve.col.double-top
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				h6 Quel limite de chiffre d'affaire?
+				hr.lines
+				p.
+					Deux limite de chiffre d'affaire sont applicable selon 
+					la nature de votre activité:
+					<br> - 82 200 € pour une activité 
+					de vente de marchandises, d'objets, de fournitures, de denrées 
+					à emporter ou à consommer sur place, ou pour des prestations 
+					d'hébergement, à l'exception de la location de locaux 
+					d'habitation meublés dont le seuil est de 32 900 €. 
+					<br> - 32 900 € pour les prestations de services relevant 
+					de la catégorie des bénéfices industriels et commerciaux (BIC) 
+					ou des bénéfices non commerciaux (BNC). Pour les créations en 
+					cours d'année, ces montants sont réduits en fonction de la 
+					durée d'activité.
