--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -16,10 +16,10 @@ section
 					Peon vous guide et prend en charge les questions d’ordre légal.
 					Vous gagnez un temp considérable à rentabiliser selon vos envies.
 			.four.col
-				.circle.big-circle.bg-complement-light.quad-top
+				.circle.big-circle.bg-grey-10.quad-top
 		.row
 			.four.col
-				.circle.big-circle.bg-complement-light.quad-top
+				.circle.big-circle.bg-grey-10.quad-top
 			.eight.col.text-right
 				h4.quad-top Le temps c'est de l'argent.
 				h6.text-grey-80 Arrêtez de vous prendre la tête, entreprenez.
@@ -36,12 +36,12 @@ section
 					Peon vous guide et prend en charge les questions d’ordre légal.
 					Vous gagnez un temp considérable à rentabiliser selon vos envies.
 			.four.col
-				.circle.big-circle.bg-complement-light.quad-top
+				.circle.big-circle.bg-grey-10.quad-top
 
 section
 	.container
 		.row
-			h4.text-center.octo-top Faites valider vos devis plus vite que jamais
+			h4.text-center.octo-top Vos devis en moins de 60 secondes
 			.eight.col.offset-two.bg-grey-05.double-padding.double-top
 				| <iframe width="100%" height="315" src="https://www.youtube.com/embed/GsFQ6jskci0" frameborder="0" allowfullscreen></iframe>
 
@@ -85,40 +85,3 @@ section.background
 				h4.text-white.text-center.quad-top Pas convaincu ? Essayez le !
 				.fluid-horizontal-center
 					button.button.double-bot.complement C'est gratuit
-footer.bg-complement
-	.container
-		.row.text-white.double-bot.quad-top
-			.three.col
-				h6 L'application
-				ul.no-style
-					li
-						a(href="#") Créer un compte
-					li
-						a(href="#") S'inscrire
-					li
-						a(href="#") FAQ
-			.three.col
-				h6 Contact
-				ul.no-style
-					li
-						a(href="#") Email
-					li
-						a(href="#") Twitter
-					li
-						a(href="#") Facebook
-					li
-						a(href="#") Google +
-			.three.col
-				h6 A propos
-				ul.no-style
-					li
-						a(href="#") Histoire
-					li
-						a(href="#") Presse
-					li
-						a(href="#") Jobs
-			.three.col
-				h6 Conditions
-				ul.no-style
-					li
-						a(href="#") CGV
