remove public to gitignore

--- a/src/index.jade
+++ b/src/index.jade
@@ -12,7 +12,7 @@ html
 		// titre google et d'onglet
 		title Peon
 
-		link(rel="icon" href="favicon.ico")
+		link(rel="icon" href="ressources/favicon.ico")
 
 		// texte google 
 		meta(name='description', content="Expert comptable automatisé pour auto entrepreneurs.")
