add plumber to gulp

--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -82,6 +82,6 @@ section.background
 	.container
 		.row
 			.twelve.col
-				h4.text-white.text-center.quad-top Pas convaincu ? Essayez le !
+				h4.text-white.text-center.quad-top Convaincu ou non, essayez-le !
 				.fluid-horizontal-center
 					button.button.double-bot.complement C'est gratuit
