--- a/src/styles/abstract/base.scss
+++ b/src/styles/abstract/base.scss
@@ -2,7 +2,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 	//.include-font("assets/font/icons/", "openSans"); 
-	@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,800,400italic,700italic,300|PT+Serif:400,800italic,700italic|PT+Serif+Caption);
+	@import url('//fonts.googleapis.com/css?family=Open+Sans:400,600,800,400italic,700italic,300|PT+Serif:400,800italic,700italic|PT+Serif+Caption');
 
 	$font-georgia:          	Georgia, "Times New Roman", Times, serif;
 
