--- a/src/styles/abstract/color.scss
+++ b/src/styles/abstract/color.scss
@@ -24,7 +24,7 @@
 	$color-danger-light:			lighten($color-danger, 15%);
 
 
-	/* ## Checkbox
+	/* ## Grey scale list
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 		$color-grey-05:				rgb(250, 250, 250);
