--- a/src/templates/contact.jade
+++ b/src/templates/contact.jade
@@ -15,7 +15,7 @@ section.background
 			.twelve.col
 				label Message
 				textarea.full(placeholder="Votre message ici ...")
-				a.add-top.button.complement.pull-right Envoyer
+				button.add-top.button.complement.pull-right Envoyer
 		.four.col.double-padding
 			i.icon.icon-plane.pull-left.text-grey-80.add-padding
 			h6 Ou bien par
