--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -9,32 +9,33 @@ section
 	.container
 		.row
 			.eight.col
-				h4.quad-top Fini la paperasse !
-				h6.text-grey-80 Arrêtez de vous prendre la tête, entreprenez.
+				h4.quad-top Retour à l'essentiel
+				h6.text-grey-80 Une interface simple pour une prise en main immédiate.
 				p.quad-bot.
-					Que ce soit pour l’editions ou la gestion de vos devis et factures,
-					Peon vous guide et prend en charge les questions d’ordre légal.
-					Vous gagnez un temp considérable à rentabiliser selon vos envies.
+					Conçus par des auto-entrepreneurs, Peon est probablement le logiciel le plus proche de vous.
+					Nous avons éliminé toutes options superflu pour vous garantir un environnement de travail agréable et
+					intuitif.
 			.four.col
 				.circle.big-circle.bg-grey-10.quad-top
 		.row
 			.four.col
 				.circle.big-circle.bg-grey-10.quad-top
 			.eight.col.text-right
-				h4.quad-top Le temps c'est de l'argent.
-				h6.text-grey-80 Arrêtez de vous prendre la tête, entreprenez.
+				h4.quad-top Plus rapide
+				h6.text-grey-80 Des fonctionnalités innovantes pour plus de temps libre.
 				p.quad-bot.
-					Que ce soit pour l’editions ou la gestion de vos devis et factures,
-					Peon vous guide et prend en charge les questions d’ordre légal.
-					Vous gagnez un temp considérable à rentabiliser selon vos envies.
+					Grace à ses fonctionnalités innovantes, comme l'édition de facture instantanée, ou la validation des devis en
+					ligne, Peon accélère le fonctionnement quotidien de votre auto-entreprise.
+					La plupart des actions sont automatisées. Enregistrez vos clients, sectionnez vos prestations, et laissez
+					Peon faire le reste. 
 		.row
 			.eight.col
-				h4.quad-top Fini la paperasse !
-				h6.text-grey-80 Arrêtez de vous prendre la tête, entreprenez.
+				h4.quad-top Sans engagement
+				h6.text-grey-80 Aucune contrainte pour une liberté totale.
 				p.quad-bot.
-					Que ce soit pour l’editions ou la gestion de vos devis et factures,
-					Peon vous guide et prend en charge les questions d’ordre légal.
-					Vous gagnez un temp considérable à rentabiliser selon vos envies.
+					La totalitée du service est accessible sans engagement.
+					Vous pouvez à tout moment vous désabonner sur simple clic depuis le menu option tout en exportant votre comptabilité.
+					Et même dans ce cas, votre compte et vos données restent accessible à tout moment.
 			.four.col
 				.circle.big-circle.bg-grey-10.quad-top
 
@@ -53,29 +54,29 @@ section
 				h6.text-center.text-grey-80.quad-bot liste non exhaustive
 		.row
 			.four.col
-				.circle.small-circle.bg-complement-light
+				.circle.small-circle.circle-responsive
 				p.i.add-top.text-center Accessible sur tablette, PC
 				// p.text-center mabite
 			.four.col
-				.circle.small-circle.bg-complement-light
+				.circle.small-circle.circle-cloudsafe
 				p.i.add-top.text-center Données sécurisées.
 				// p.text-center mabite
 			.four.col
-				.circle.small-circle.bg-complement-light
+				.circle.small-circle.circle-papers
 				p.i.add-top.text-center Edition de devis et factures.
 				// p.text-center mabite
 		.row.octo-bot.double-top
 			.four.col
-				.circle.small-circle.bg-complement-light
-				p.i.add-top.text-center Calcul automatique des charges.
+				.circle.small-circle.circle-calculator
+				p.i.add-top.text-center Calcul automatique des cotisations.
 				// p.text-center mabite
 			.four.col
-				.circle.small-circle.bg-complement-light
-				p.i.add-top.text-center Autogestion des impayé.
+				.circle.small-circle.circle-pig
+				p.i.add-top.text-center Gestion des impayés.
 				// p.text-center mabite
 			.four.col
-				.circle.small-circle.bg-complement-light
-				p.i.add-top.text-center Pas d'engagement de durée.
+				.circle.small-circle.circle-unlimited
+				p.i.add-top.text-center Sans engagement.
 				// p.text-center mabite
 section.background
 	#peon
