--- a/src/templates/nav.jade
+++ b/src/templates/nav.jade
@@ -6,8 +6,8 @@ nav
 				a.pull-left.uppercase(ui-sref="nav.apropos") A propos
 				a.pull-left.uppercase(ui-sref="nav.contact") Contact
 				a.pull-left.uppercase(ui-sref="nav.faq") FAQ
-				a.button.small.pull-right.complement(ui-sref="#") Se connecter
-				a.button.small.pull-right.primary(ui-sref="#") Créer un compte
+				button.button.small.pull-right.complement(ui-sref="#") Se connecter
+				button.button.small.pull-right.primary(ui-sref="#") Créer un compte
 
 div(ui-view="")
 footer.bg-complement
