--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -1,11 +1,18 @@
 section.background
+	#main-texture
+	#main-background
 	.container
 		.twelve.col
 			h3.octo-top.double-bot.text-white.text-center A propos de nous
 .container
 	.row.text-center.quad-bot.quad-top
 		.twelve.col
-			p.text-center Malheureusement, bien que simplifié, le statut d'auto-entrepreneurs soulève beaucoup de questions d'ordre légal qui compliquent encore pas mal la gestion et l'organisation. Ces difficultés ont toujours été un frein au bon développement d'une activité. Parti du constat que les services proposés actuellement sont chers, compliqués et / ou prennent pas en compte les besoins réels des auto-entrepreneurs. Nous avons pris la décision de s'associer dans la conception d'un outil simple, et accessible à tous à moindre frais.
+			p.text-center.
+				Peon est un logiciel de gestion d'activité spécialisé pour auto-entrepreneur exerçant une activité de 
+				prestation de service, ou une activité libéral.
+				Conçu <b>par des auto-entrepreneurs</b>, il est le logiciel le plus proche de vous.
+				Cette implication à permis d'identifier les besoins réel des auto-entrepreneurs 
+				afin de mettre au point un outil et des fonctionnalités innovante pour vous assister quotidiennement dans la gestion de votre auto-entreprise.
 	.row.double-top.text-center
 		h4.quad-bot L'equipe
 		.three.col
