--- a/src/templates/faq.jade
+++ b/src/templates/faq.jade
@@ -1,4 +1,6 @@
 section.background
+	#main-texture
+	#main-background
 	.container
 		.twelve.col
 			h3.octo-top.double-bot.text-white.text-center Les questions c'est par ici !
