--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -1,9 +1,11 @@
 section.background
+	#main-texture
+	#main-background
 	#welcome
-	.container
+	#content.container
 		.twelve.col
 			h3.text-right.octo-top.text-white Enfin une bonne raison d'entreprendre !
-			button.pull-right.button.quad-bot.complement(href="") essais gratuit
+			button.pull-right.button.quad-bot.primary(href="") essais gratuit
 
 section
 	.container
@@ -16,10 +18,10 @@ section
 					Nous avons éliminé toutes options superflu pour vous garantir un environnement de travail agréable et
 					intuitif.
 			.four.col
-				.circle.big-circle.bg-grey-10.quad-top
+				.big-circle.circle-paperasse.quad-top
 		.row
 			.four.col
-				.circle.big-circle.bg-grey-10.quad-top
+				.big-circle.circle-paperasse.quad-top
 			.eight.col.text-right
 				h4.quad-top Plus rapide
 				h6.text-grey-80 Des fonctionnalités innovantes pour plus de temps libre.
@@ -37,7 +39,7 @@ section
 					Vous pouvez à tout moment vous désabonner sur simple clic depuis le menu option tout en exportant votre comptabilité.
 					Et même dans ce cas, votre compte et vos données restent accessible à tout moment.
 			.four.col
-				.circle.big-circle.bg-grey-10.quad-top
+				.big-circle.circle-paperasse.quad-top
 
 section
 	.container
@@ -68,7 +70,7 @@ section
 		.row.octo-bot.double-top
 			.four.col
 				.circle.small-circle.circle-calculator
-				p.i.add-top.text-center Calcul automatique des cotisations.
+				p.i.add-top.text-center Calcul des cotisations.
 				// p.text-center mabite
 			.four.col
 				.circle.small-circle.circle-pig
@@ -85,4 +87,4 @@ section.background
 			.twelve.col
 				h4.text-white.text-center.quad-top Convaincu ou non, essayez-le !
 				.fluid-horizontal-center
-					button.button.double-bot.complement C'est gratuit
+					button.button.double-bot.primary C'est gratuit
